# firewall_offload

./: .gitignore  AUTHORS  Makefile  README.md  build.sh  meson.build  nv_opof.spec.in
.devcontainer/: devcontainer.json  setup_container.sh
debian/: changelog  changelog.in  control  copyright  nv-opof.install  nv-opof.postinst  opof.install  rules
include/: nv_opof.h  nv_opof_rpc.h  nv_opof_util.h  openoffload.grpc.pb.h  openoffload.pb.h  opof_serverlib.h
kernel/: 0001-mlx5-core-E-Switch-Add-sent-to-vport-miss-rule.patch  install_kernel_patch.sh
scripts/: build.sh  build_deb.sh  nv-opof.service  nv_opof.conf.default  nv_opof_check  nv_opof_setup  opof.service  opof_pre_check  opof_setup
src/: meson.build  nv_opof.c  nv_opof_flow.c  nv_opof_init.c  nv_opof_rpc.c  nv_opof_server.c  nv_opof_thread.c  nv_opof_util.c  opof
src/jsonrpc/: README.md
subprojects/: session_offload.wrap
subprojects/jsonrpc/: meson.build
subprojects/packagefiles/: session_offload_test_args.patch
subprojects/packagefiles/session_offload_patches/: meson.build
subprojects/packagefiles/session_offload_patches/openoffload/cpp/framework/src/: meson.build
subprojects/packagefiles/session_offload_patches/protos/: meson.build
